--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <!-- /navbar  -->
 
     <!-- header  -->
-    <div class="container-fluid second-container">
+    <div class="container-fluid second-container pb-5">
         <div class="row justify-content-center">
             <div class="col-5 gy-5 test">
                 <img class="mx-auto d-block rounded-circle pb-3 " src="https://picsum.photos/200" alt="">
@@ -50,8 +50,8 @@
         </div>
     </div>
 
-    <div class="container-fluid third-container ">
-        <div class="container pt-5 test">
+    <div class="container-fluid third-container pt-5 pb-5 ">
+        <div class="container pt-5 pb-5 test">
             <div class="row justify-content-center mb-3 ">
                 <div class="col-3  test  "></div>
             </div>
@@ -71,7 +71,7 @@
         </div>
     </div>
 
-    <div class="container-fluid fourth-container pt-5  ">
+    <div class="container-fluid fourth-container pt-5 pb-5 ">
         <div class="row justify-content-center">
             <div class="col-3 test">
 
