fix: third-container grid

--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
 
     <!-- navbar  -->
     <div class="container-fluid first-container">
-        <div class="container">
-            <div class="row justify-content-between">
-                <div class="col-sm-3 test"></div>
-                <div class="col-3 test">
-                    <div class="row">
-                        <div class="col test"></div>
-                        <div class="col test"></div>
-                        <div class="col test"></div>
+        <div class="container py-4 text-center">
+            <div class="row justify-content-between text-white fw-bold text-uppercase d-flex align-items-center">
+                <div class="col-sm-3 fs-4"> START BOOTSTRAP</div>
+                <div class="col-3 ">
+                    <div class="row ">
+                        <div class="col ">PORTFOLIO</div>
+                        <div class="col ">ABOUT</div>
+                        <div class="col ">CONTACT</div>
                     </div>
                 </div>
             </div>
@@ -35,12 +35,12 @@
     <!-- header  -->
     <div class="container-fluid second-container pb-5">
         <div class="row justify-content-center">
-            <div class="col-5 gy-5 test">
+            <div class="col-5 gy-5 pt-3 text-center fw-bold text-white">
                 <img class="mx-auto d-block rounded-circle pb-3 " src="https://picsum.photos/200" alt="">
 
-                <div class="col test mb-2"></div>
+                <h1>START BOOTSTRAP</h1>
 
-                <div class="col test mb-2"></div>
+                <div class="col  mb-2">GRAPHIC ARTIST - WEB DESIGNER - ILLUSTRATOR </div>
 
             </div>
 
@@ -51,22 +51,31 @@
     </div>
 
     <div class="container-fluid third-container pt-5 pb-5 ">
-        <div class="container pt-5 pb-5 test">
-            <div class="row justify-content-center mb-3 ">
-                <div class="col-3  test  "></div>
-            </div>
+        <div class="container pt-5 pb-5 text-center">
+            
 
-            <div class="row  gy-4 justify-content-between">
-                <div class="col-3 test"></div>
-                <div class="col-3 test"></div>
-                <div class="col-3 test"></div>
+                <h2>PORTFOLIO</h2>
 
-                <div class="w-100"></div>
+            <div class="row row-cols-3 g-3 ">
+                <div class="col">
+                    <div class="test"></div>
+                </div>
+                <div class="col">
+                    <div class="test"></div>
+                </div>
+                <div class="col">
+                    <div class="test"></div>
+                </div>
 
-
-                <div class="col-3 test"></div>
-                <div class="col-3 test"></div>
-                <div class="col-3 test"></div>
+                <div class="col">
+                    <div class="test"></div>
+                </div>
+                <div class="col">
+                    <div class="test"></div>
+                </div>
+                <div class="col">
+                    <div class="test"></div>
+                </div>
             </div>
         </div>
     </div>
