--- a/index.html
+++ b/index.html
@@ -107,33 +107,33 @@
 
             <div class="row row-cols-lg-3 row-cols-sm-2 row-cols-1 g-3 ">
                 <div class="col">
-                    <div class=" rounded-3">
+                    <div class=" rounded-3 overflow-hidden">
                         <img src="img/cabin.png" class="img-fluid" alt="">
                     </div>
                 </div>
                 <div class="col">
-                    <div class=" rounded-3">
+                    <div class=" rounded-3 overflow-hidden">
                        <img src="img/cake.png" class="img-fluid" alt=""> 
                     </div>
                 </div>
                 <div class="col">
-                    <div class=" rounded-3">
+                    <div class=" rounded-3 overflow-hidden">
                         <img src="img/circus.png" class="img-fluid" alt="">
                     </div>
                 </div>
 
                 <div class="col">
-                    <div class=" rounded-3">
+                    <div class=" rounded-3 overflow-hidden">
                         <img src="img/game.png" class="img-fluid" alt="">
                     </div>
                 </div>
                 <div class="col">
-                    <div class=" rounded-3">
+                    <div class=" rounded-3 overflow-hidden">
                         <img src="img/safe.png" class="img-fluid" alt="">
                     </div>
                 </div>
                 <div class="col">
-                    <div class=" rounded-3">
+                    <div class=" rounded-3 overflow-hidden">
                         <img src="img/submarine.png" class="img-fluid" alt="">
                     </div>
                 </div>
